fixed list design (overflow: scroll-->hidden)

--- a/app/assets/stylesheets/advertisements.scss
+++ b/app/assets/stylesheets/advertisements.scss
@@ -913,7 +913,7 @@
   color: #888;
   margin-top: 10px;
   max-height: 130px;
-  overflow: scroll;
+  overflow: hidden;
 }
 .ad_list .text2 .url a {
   display: inline-block;
