--- a/app/assets/stylesheets/tabs.scss
+++ b/app/assets/stylesheets/tabs.scss
@@ -66,8 +66,8 @@
   color: #888;
   font-size: 13px;
   display: block;
-  max-height: 45px;
-  overflow: scroll;
+  max-height: 42px;
+  overflow: hidden;
 }
 .user_list .content_div .count_box {
   position: absolute;
